[metadata]
name = awsdefault
author = Alban King
version = 1.0.0
description = calls aws cli adding missing defaults from nearest '.awsconfig'
long_description = calls the aws cli with additional arguments found in the '.awsconfig' file(s) found the current and parent directories if the args weren't set explicitly.
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = awsdefault
python_requires = >=3.7

[options.entry_points]
console_scripts =
    awsdefault = awsdefault:main
